discussion/kv_engine/177004/177004_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Reuse connection in metering tests

Reuse the same connection in the metering tests instead of
creating a new connection for each unit test

Change-Id: I8bb75157a98bb5cda50830d83ad5c1fd64d07d0c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 09:27:34.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18537/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:34:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:49:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:85:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:399:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:940:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:991:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1223:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18537/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:34:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18537/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21408/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.KeyOnly/McbpSsl_XattrYes_JsonYes_SnappyNo":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.KeyOnly/McbpSsl_XattrYes_JsonYes_SnappyNo
[2022-07-03T09:09:01.160Z] unknown file: Failure
[2022-07-03T09:09:01.160Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for HELLO" thrown in SetUp().
[2022-07-03T09:09:01.160Z] [  FAILED  ] TransportProtocols/RangeScanTest.KeyOnly/McbpSsl_XattrYes_JsonYes_SnappyNo, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <01-00 00-00>) (2002 ms)
TransportProtocols/RangeScanTest.KeyOnly/McbpSsl_XattrYes_JsonYes_SnappyNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8207/ : FAILURE

Compile error at [2022-07-03T08:15:54.226Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17687/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47295/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39749/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28801/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19642/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8306/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20768/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20420/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
